# mpePy

./: .gitignore  README.md  README.rst  main.py  multivariate_permutation_entropy.py  pyproject.toml  requirements.txt  setup.cfg
intermediate_output/: simulation_mfBm.R
mpepy/: multivariate_permutation_entropy.py  permutation_entropy.py
