[metadata]
name = mpePy
version = 0.0.1
author = Marisa Mohr
author_email = mail@marisa-mohr.de
description = A Python package for data analysis with multivariate permutation entropy
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/marisamohr/mpePy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]

python_requires = >=3.6
